# tomahawk-plugin-vsxu

./: CMakeLists.txt  README.md  VSXuPlugin.cpp  VSXuPlugin.h  VSXuRenderer.cpp  VSXuRenderer.h  VisualizerWidget.cpp  VisualizerWidget.h  resources.qrc
cmake/Modules/: FindVSXu.cmake
